--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="image/Ca 1-2 images Cycles/logo-roar-bikes.png" alt="Roar Bikes Logo" class="logo">
+    <img src="logo-roar-bikes.png" alt="Roar Bikes Logo" class="logo">
     <nav>
       <a href="#dich-vu">Dịch vụ</a>
       <a href="#ve-chung-toi">Về chúng tôi</a>
@@ -29,27 +29,27 @@
         <a href="#" class="btn">Đặt trực tuyến</a>
       </div>
       <div class="intro-img">
-        <img src="image/Ca 1-2 images Cycles/image-bike-repair-service.jpg" alt="Thợ đang sửa xe đạp">
+        <img src="image-bike-repair-service.jpg" alt="Thợ đang sửa xe đạp">
       </div>
     </section>
 
     <section id="dich-vu" class="services">
       <article>
-        <img src="image/Ca 1-2 images Cycles/image-background-card1.jpg" alt="Đặt lịch sửa chữa trực tuyến">
+        <img src="image-background-card1.jpg" alt="Đặt lịch sửa chữa trực tuyến">
         <h2><i class="fa-solid fa-motorcycle"></i></h2>
         <p class="title">Đặt trực tuyến</p>
         <p class="description">Đặt trực tuyến để chúng tôi có thể phục vụ bạn một cách chu đáo nhất.</p>
       </article>
 
       <article>
-        <img src="image/Ca 1-2 images Cycles/image-background-card2.jpg" alt="Các dịch vụ sửa chữa">
+        <img src="image-background-card2.jpg" alt="Các dịch vụ sửa chữa">
         <h2><i class="fa-solid fa-screwdriver-wrench"></i></h2>
         <p class="title">Các dịch vụ</p>
         <p class="description">Biết rõ hơn về các dịch vụ mà chúng tôi đang cung cấp.</p>
       </article>
 
       <article>
-        <img src="image/Ca 1-2 images Cycles/image-background-card3.jpg" alt="Hỗ trợ tư vấn">
+        <img src="image-background-card3.jpg" alt="Hỗ trợ tư vấn">
         <h2><i class="fa-solid fa-headset"></i></h2>
         <p class="title">Hỗ trợ tư vấn</p>
         <p class="description">Gọi cho nhân viên tổng đài để được tư vấn và giải đáp thắc mắc một cách chu đáo nhất.</p>
@@ -77,3 +77,4 @@
   </main>
 </body>
 </html>
+
